Update cors configuration